2011-05-07  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Implemented full-depth topology
	detection (recursive). Added checks for disable name resolution
	os detection and set a max. depth recursion. This produces
	amazing network maps ! :-)

2011-04-13  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Tools.pm: Fixed bug #3273910. HPUX detection.

	* lib/PandoraFMS/ReconServer.pm: Fixed bug #3286027. Fix also 
	the "non finished" status for the Script Recon tasks, and as 
	new feature implements the "manual" recon task, works only when
	you press the button.

2011-03-15  Sancho Lerena <slerena@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed a typo in interface
	detection :-(

2011-02-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/WMIServer.pm: Merged from trunk. Fixed a typo.

2011-02-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Merged from trunk. HTML encode events.

2011-02-22  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server_installer: Merged from trunk. Change tentacle_server
	  permissions.

2011-02-22  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/control, DEBIAN/make_deb_package.sh,
	  pandora_server.spec, lib/PandoraFMS/Config.pm: Updated version
	  strings.

2011-02-22  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed bug 3175575

2011-02-22  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Tools.pm: Ported support of Android and Embedded
	devices from trunk.

	* DEBIAN/postinst: Fixed permissions on /incoming dirs for www-data
	
	* lib/PandoraFMS/Config.pm: Updated version.

2011-02-18  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Merged from trunk. Verify that there is a
	  data server running when computing server stats. Thanks to Tadashi
	  Kaneda.

2011-02-16  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Merged from trunk. Do not update the
	  module description if it's empty. Fixes bug #3162637.
